--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
+    "@typescript-eslint/no-inferrable-types": "off", // Explicit type annotations are helpful for binary data.
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
