--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint"
   },
+  "pre-commit": [
+    "lint",
+    "test",
+    "clean",
+    "build"
+  ],
   "keywords": [],
   "author": "Scalene Scales",
   "license": "MIT",
@@ -39,6 +45,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.4.2",
+    "pre-commit": "^1.2.2",
     "ts-essentials": "^9.3.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
